[project]
name = "lampung-tourism-scraper"
version = "0.1.0"
description = "A data pipeline to collect, normalize, deduplicate, and enrich tourism destinations in Lampung Province."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "playwright>=1.40.0",
    "rapidfuzz>=3.6.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
